--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.example.samsung.qiwi_users_balance"
+        applicationId "com.example.samsung.qiwi_users_balances"
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
